
## [4.0.0] - 2024-08-09
# Removed
- Support of tasks as it unused to due its incompatibility with GitHub.

# Added
- Bert-E's status notifications through a build status check.
- Support of development branches with only major version: `development/x`.

# Changed
- Integration queue branches pattern is now `q/w/{pr.id}/{integration.branch}`
  instead of `q/{pr.id}/{integration.branch}`.

## [3.12.0] - 2024-02-26
# Added
- Add toggable list of options and commands to init message.

## [3.11.0] - 2024-01-26
# Added
- Support of merging a PR and skip the queue when it is not needed.

## [3.10.0] - 2023-11-14
# Added
- Support of tags created with `v` prefix.

## [3.9.0] - 2023-07-20
# Added
- Introducing a new option that prevent the creation of
  integration branches.

## [3.7.0] - 2022-08-08
# Added
- Support config settings through environment.

## [3.6.22] - 2022-08-08
# Fixed
- Fixed configuration for Webhook authentication.

## [3.6.21] - 2022-08-05
# Added
- Making reverse proxy configuration through env.
# Fixed
- Wsgi config for http scheme had a typo.

## [3.6.19] - 2022-06-30
# Fixed
- Ensure check suites build status are stored on webhook event.

## [3.6.18] - 2022-05-20
# Added
- Extra logs to debug status of queue branches in the UI
# Fixed
- Fixup implementation of verifying status from different branches

## [3.6.17] - 2022-05-20
# Fixed
- Get best result from different branches that build on same commit.

## [3.6.16] - 2022-05-19
# Fixed
- Take into account queued or pending status as inprogress.

## [3.6.14] - 2022-05-18
# Fixed
- Infinite loop when searching for workflow dispatch runs.

## [3.6.13] - 2022-05-12
# Added
- Support check-suites event on GitHub Actions
# Fixed
- Changing url returned on status page for queue build on GitHub Actions

## [3.6.12] - 2022-05-04
# Fixed
- Fix Key error when retrieve html_url for checksuites

## [3.6.11] - 2022-04-28
# Fixed
- Fix Key error when retrieve html_url for checksuites

## [3.6.10] - 2022-04-25